#7 Use registered special canvas data type for Gallery paintings